--- a/src/assets/service.scss
+++ b/src/assets/service.scss
@@ -4,6 +4,7 @@
 
 h1.display-3 {
     font-family: 'Faster One', cursive !important;
+    text-shadow: 10px 15px 7px grey;
 }
 
 .service-container {
